--- a/css/fonts.css
+++ b/css/fonts.css
@@ -4,6 +4,7 @@
 	Replace your Fonts as necessary
 -----------------------------------------------------------------*/
 
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@700&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
 
 body,
 small,
@@ -35,7 +36,7 @@ label,
 .widget-filter-links li a,
 .nav-tree li a,
 .wedding-head,
-.font-primary { font-family: 'Poppins', sans-serif !important; }
+.font-primary { font-family: 'Lato', sans-serif !important; }
 
 
 .entry-link span,
@@ -49,5 +50,5 @@ label,
 .before-heading,
 .wedding-head .first-name span,
 .wedding-head .last-name span,
-.font-secondary { font-family: 'PT Serif', serif !important; }
+.font-secondary { font-family: 'Lato', sans-serif !important; }
 
