--- a/css/custom.css
+++ b/css/custom.css
@@ -11,7 +11,7 @@ h3, h4, h5 {
 
 .entry-title h3 {
 	font-size: 1.2rem;
-	letter-spacing:0px,
+	letter-spacing: normal;
 }
 
 .feature-box {
@@ -20,10 +20,15 @@ h3, h4, h5 {
 }
 .fbox-content p {
 	color: #555;
+	font-size: 1rem;
 }
 .fbox-content h4 {
 	color: #EF7800;
 	margin: 0px 0px 0px 0px;
+	font-size: 1.2rem;
+}
+.team-title h4 {
+	letter-spacing: normal;
 }
 .promo-custom-bg {
 	background-color: #d8d0ca;
